--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-gitdb==4.0.10
-GitPython==3.1.34
-idna==3.4
-importlib-metadata==6.8.0
-ipykernel==6.25.1
-ipython==8.15.0
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-markdown-it-py==3.0.0
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-nbformat==5.9.2
-numpy==1.25.2
-packaging==23.1
-pandas==2.1.0
-plotly==5.16.1
-prompt-toolkit==3.0.39
-python-dateutil==2.8.2
-requests==2.31.0
-scipy==1.11.2
-seaborn==0.12.2
-smmap==5.0.0
-streamlit==1.26.0
+gitdb
+GitPython
+idna
+importlib-metadata
+ipykernel
+ipython
+jsonschema
+jsonschema-specifications
+jupyter_client
+jupyter_core
+markdown-it-py
+matplotlib
+matplotlib-inline
+nbformat
+numpy
+packaging
+pandas
+plotly
+prompt-toolkit
+python-dateutil
+requests
+scipy
+seaborn
+smmap
+streamlit
 
